--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,6 +5,7 @@ environment:
   matrix:
     - PYTHON: "C:\\Python27"
     - PYTHON: "C:\\Python27-x64"
+      DISTUTILS_USE_SDK: "1"
     - PYTHON: "C:\\Python34"
       DISTUTILS_USE_SDK: "1"
     - PYTHON: "C:\\Python34-x64"
