--- a/appveyor.yml
+++ b/appveyor.yml
@@ -53,8 +53,8 @@ install:
   - "SET PATH=appveyor\\swig;%PATH%"
 
   - "%PYTHON%/python -m pip install pip setuptools>=34.0 nose twine wheel --upgrade"
-  - "build.cmd python appveyor/build_glpk.py"
-  - "build.cmd python setup.py install"
+  - "appveyor\\build.cmd python appveyor/build_glpk.py"
+  - "appveyor\\build.cmd python setup.py install"
 
 build: off
 
@@ -69,8 +69,8 @@ test_script:
   - "dir"
 
 after_test:
-  - "build.cmd python setup.py bdist_wheel"
-  - "build.cmd python setup.py bdist_wininst"
+  - "appveyor\\build.cmd python setup.py bdist_wheel"
+  - "appveyor\\build.cmd python setup.py bdist_wininst"
   - ps: "ls dist"
 
 artifacts:
